fix: register layout issue

--- a/app/(tourist)/regist/page.module.scss
+++ b/app/(tourist)/regist/page.module.scss
@@ -55,14 +55,13 @@
 .veriCodeInput {
   position: relative;
   input {
-    width: 86px;
-    padding: 1px 180px 1px 48px;
+    padding-left: 50px;
   }
 }
 
 .defaultHead {
   position: absolute;
-  top: 67px;
+  top: 63px;
   left: 0px;
   left: 20px;
 
